--- a/nodejs-helloworld/package.json
+++ b/nodejs-helloworld/package.json
@@ -4,7 +4,7 @@
   "description": "Hello World!",
   "main": "app.js",
   "scripts": {
-    "start": "node app.hs"
+    "start": "node app.js"
   },
   "author": "Red Hat Training",
   "license": "ASL",
